--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -16,6 +16,9 @@
             </li>
            
            </ng-container>
+           <li class="nav-item">
+            <a class="nav-link " routerLink='/errors' routerLinkActive="active">Errors</a>
+          </li>
           </ul>
           <div class="dropdown" *ngIf="(accountService.currentUser$ |async) as user" dropdown>
             <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.userName | titlecase}}</a>
